# kube-derive-poc

./: Cargo.toml  README.md
src/: main.rs
