[package]
name = "kube-derive-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
kube-derive = "0.96.0"
kube-core = "0.98.0"
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
schemars = "0.8.21"

